# aspect-cli-plugin-nodejs-sdk

./: BUILD.bazel  MODULE.bazel  README.md  buf.yaml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.aspect/cli/: config.yaml
proto/: BUILD.bazel  aspect_plugin.proto  aspect_plugin_connect.d.ts  aspect_plugin_pb.d.ts
proto/bazel/action_cache/: BUILD.bazel  action_cache.proto  action_cache_pb.d.ts
proto/bazel/buildeventstream/: BUILD.bazel  build_event_stream.proto  build_event_stream_connect.d.ts  build_event_stream_pb.d.ts
proto/bazel/command_line/: BUILD.bazel  command_line.proto  command_line_pb.d.ts
proto/bazel/failure_details/: BUILD.bazel  failure_details_pb.d.ts
proto/bazel/invocation_policy/: BUILD.bazel  invocation_policy.proto  invocation_policy_pb.d.ts
proto/bazel/options/: BUILD.bazel  option_filters.proto  option_filters_pb.d.ts
proto/bazel/packages_metrics/: BUILD.bazel  package_load_metrics_pb.d.ts
proto/grpc/health/v1/: BUILD.bazel  health_connect.d.ts  health_pb.d.ts
proto/plugin/: BUILD.bazel  README.md  grpc_stdio_connect.d.ts  grpc_stdio_pb.d.ts
src/: BUILD.bazel  connect.ts  index.ts  tsconfig.json
tools/toolchains/: BUILD.bazel
