load("@aspect_rules_js//js:defs.bzl", "js_binary")
load("@aspect_rules_ts//ts:defs.bzl", "ts_project")

ts_project(
    name = "ts",
    srcs = [
        "connect.ts",
        "index.ts",
    ],
    deps = [
        # TODO: get these from buf schema registry rather than vendoring
        "//proto/plugin:grpc_stdio_ts",
        "//:node_modules/@buf/aspect-build_aspect-cli.bufbuild_es",
        "//:node_modules/@buf/aspect-build_aspect-cli.connectrpc_es",
        "//:node_modules/@buf/grpc_grpc.connectrpc_es",
        "//:node_modules/@buf/grpc_grpc.bufbuild_es",
        "//:node_modules/@connectrpc/connect",
        "//:node_modules/@connectrpc/connect-fastify",
        "//:node_modules/@types/node",
        "//:node_modules/fastify",
    ],
)

js_binary(
    name = "src",
    entry_point = "index.js",
    data = [
        "//:package_json",
        ":ts",
    ],
    env = {
        # Allow running the resulting binary directly in the execroot rather than with 'bazel run'
        "BAZEL_BINDIR": ".",
    },
)
