load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "action_cache_proto",
    srcs = ["action_cache.proto"],
    visibility = [
        "//proto:__pkg__",
        "//proto/bazel/buildeventstream:__pkg__",
    ],
)

ts_proto_library(
    name = "action_cache_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = "action_cache_proto",
    visibility = ["//proto/bazel/buildeventstream:__pkg__"],
)
