load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "build_event_stream_proto",
    srcs = ["build_event_stream.proto"],
    visibility = ["//proto:__pkg__"],
    deps = [
        "//proto/bazel/action_cache:action_cache_proto",
        "//proto/bazel/command_line:command_line_proto",
        "//proto/bazel/failure_details:failure_details_proto",
        "//proto/bazel/invocation_policy:invocation_policy_proto",
        "//proto/bazel/packages_metrics:package_load_metrics_proto",
        "@com_google_protobuf//:any_proto",
        "@com_google_protobuf//:duration_proto",
        "@com_google_protobuf//:timestamp_proto",
    ],
)

ts_proto_library(
    name = "build_event_stream_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = "build_event_stream_proto",
    deps = [
        "//proto/bazel/action_cache:action_cache_ts",
        "//proto/bazel/command_line:command_line_ts",
        "//proto/bazel/failure_details:failure_details_ts",
        "//proto/bazel/invocation_policy:invocation_policy_ts",
        "//proto/bazel/packages_metrics:package_load_metrics_ts",
    ],
    visibility = ["//proto:__pkg__"],
)
