load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "failure_details_proto",
    srcs = ["failure_details.proto"],
    visibility = [
        "//proto:__pkg__",
        "//proto/bazel/buildeventstream:__pkg__",
    ],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

ts_proto_library(
    name = "failure_details_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = "failure_details_proto",
    visibility = ["//proto/bazel/buildeventstream:__pkg__"],
)
