load("@aspect_rules_ts//ts:proto.bzl", "ts_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "invocation_policy_proto",
    srcs = ["invocation_policy.proto"],
    visibility = [
        "//proto:__pkg__",
        "//proto/bazel/buildeventstream:__pkg__",
    ],
    deps = [
        "@com_google_protobuf//:descriptor_proto",
    ],
)

ts_proto_library(
    name = "invocation_policy_ts",
    gen_connect_es = False,
    node_modules = "//:node_modules",
    proto = "invocation_policy_proto",
    visibility = ["//proto/bazel/buildeventstream:__pkg__"],
)
